GPT: Fix creation of GPT disk systems; resolves #10298

* The alternate / backup block wasn't defined
  leading to an invalid configuration.
* This was compounded with another issue that
  was resolved a while back with GPT
* gdisk now identifies GPT systems created with
  Haiku as valid